@@ -8,6 +8,8 @@
   o Added macros debug_d and debug_dv, respectively debug plus delay and
     debug verbose plus delay.  Removed the old Debug macro.
   o Restored command line switch `-w' (wait).
+  o Rewrote (again) netcat_resolvehost(), this time it's a little more
+    abstracted.
 
 
 [*] Mon Apr 29 2002 - netcat v0.2.0
